# qt-msg-reader

./: .gitignore  CMakeLists.txt  CONTEXT.md  PKGBUILD  README.md  message.msg
.github/workflows/: cmake-multi-platform.yml
src/: AttachmentModel.cpp  AttachmentModel.h  EmailTypes.h  MainWindow.cpp  MainWindow.h  MsgFileModel.cpp  MsgFileModel.h  MsgParser.cpp  MsgParser.h  main.cpp
